force-app/main/default/objects/Compliance_Rule__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Warn</fullName>
            </value>
            <value>
                <fullName>Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>