force-app/main/default/objects/Compliance_Rule__c/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <label>Pattern</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>