force-app/main/default/objects/Compliance_Rule__c/fields/Remediation_Message__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Message__c</fullName>
    <label>Remediation Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>