force-app/main/default/objects/Compliance_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keyword_Match</fullName>
                <label>Keyword Match</label>
            </value>
            <value>
                <fullName>Pattern_Match</fullName>
                <label>Pattern Match</label>
            </value>
            <value>
                <fullName>Semantic_Validation</fullName>
                <label>Semantic Validation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>