force-app/main/default/objects/Compliance_Rule__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>